Load crowds works, Add animation library id

--- a/GodotUtil/GodotUtil.csproj
+++ b/GodotUtil/GodotUtil.csproj
@@ -1,21 +1,17 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <PackageId>$(AssemblyName)</PackageId>
     <RootNamespace>SouchyUtil.Godot</RootNamespace>
   </PropertyGroup>
-
   <ItemGroup>
-    <PackageReference Include="Chickensoft.LogicBlocks" Version="4.2.2" />
-    <PackageReference Include="Chickensoft.LogicBlocks.Generator" Version="4.2.2" />
-    <PackageReference Include="Godot.SourceGenerators" Version="4.3.0-dev.6" />
-    <PackageReference Include="GodotSharp" Version="4.3.0-dev.6" />
-    <PackageReference Include="GodotSharpEditor" Version="4.3.0-dev.6" />
+	<PackageReference Include="GodotSharp" Version="4.2.3-dev" />
+    <PackageReference Include="Chickensoft.LogicBlocks" Version="4.2.1" />
+    <PackageReference Include="Chickensoft.LogicBlocks.Generator" Version="4.2.1" />
     <PackageReference Include="GodotSharpExtras" Version="0.4.0" />
-    <PackageReference Include="SimpleInjector" Version="5.4.5" />
+    <PackageReference Include="GodotSharpKit.Generator" Version="1.2.1" />
+    <PackageReference Include="SimpleInjector" Version="5.4.3" />
   </ItemGroup>
-
 </Project>
